attempt to implement frontend, preparing for directory overhaul

--- a/package.json
+++ b/package.json
@@ -14,11 +14,16 @@
     "db:view": "npx prisma studio"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.4",
     "@apollo/server": "^4.11.2",
     "@as-integrations/next": "^3.1.0",
+    "@headlessui/react": "^2.2.0",
     "@prisma/client": "^5.21.1",
-    "graphql": "^16.9.0",
+    "bcryptjs": "^2.4.3",
+    "graphql": "^16.10.0",
+    "graphql-scalars": "^1.24.0",
     "graphql-tag": "^2.12.6",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.16",
     "react": "^18",
     "react-dom": "^18",
@@ -26,14 +31,15 @@
     "sass": "^1.69.5"
   },
   "devDependencies": {
-    "@graphql-tools/merge": "^9.0.8",
+    "@graphql-tools/merge": "^9.0.15",
+    "@heroicons/react": "^2.2.0",
     "@next/eslint-plugin-next": "^14.0.4",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
-    "autoprefixer": "^10.0.1",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -41,11 +47,11 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-unicorn": "^50.0.1",
-    "postcss": "^8",
+    "postcss": "^8.4.49",
     "prettier": "3.0.3",
     "prisma": "^5.21.1",
     "run-script-os": "^1.1.6",
-    "tailwindcss": "^3.3.0",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5.6.3"
   }
 }
