--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "@graphql-tools/merge": "^9.0.15",
     "@heroicons/react": "^2.2.0",
     "@next/eslint-plugin-next": "^14.0.4",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
