--- a/package.json
+++ b/package.json
@@ -11,26 +11,32 @@
     "schema:gen:nix": "bash ./scripts/schema_gen/schema_gen.sh",
     "schema:gen:windows": ".\\scripts\\schema_gen\\schema_gen.bat",
     "db:migrate": "npx prisma migrate dev",
-    "db:view": "npx prisma studio"
+    "db:view": "npx prisma studio",
+    "test:api": "ts-node tests/api-test.ts"
   },
   "dependencies": {
-    "@apollo/client": "^3.12.4",
     "@apollo/server": "^4.11.2",
     "@as-integrations/next": "^3.1.0",
     "@headlessui/react": "^2.2.0",
     "@prisma/client": "^5.21.1",
+    "@radix-ui/react-dialog": "^1.1.4",
+    "@shadcn/ui": "^0.0.4",
     "bcryptjs": "^2.4.3",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "graphql": "^16.10.0",
     "graphql-scalars": "^1.24.0",
-    "graphql-tag": "^2.12.6",
     "jsonwebtoken": "^9.0.2",
     "next": "^14.2.16",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^4.11.0",
-    "sass": "^1.69.5"
+    "sass": "^1.69.5",
+    "shadcn-ui": "^0.9.4",
+    "tailwind-merge": "^2.6.0"
   },
   "devDependencies": {
+    "@apollo/client": "^3.12.5",
     "@graphql-tools/merge": "^9.0.15",
     "@heroicons/react": "^2.2.0",
     "@next/eslint-plugin-next": "^14.0.4",
@@ -42,6 +48,7 @@
     "@typescript-eslint/eslint-plugin": "^6.16.0",
     "@typescript-eslint/parser": "^6.16.0",
     "autoprefixer": "^10.4.20",
+    "cross-fetch": "^4.1.0",
     "eslint": "^8",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "^9.1.0",
@@ -49,11 +56,13 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-unicorn": "^50.0.1",
+    "graphql-tag": "^2.12.6",
     "postcss": "^8.4.49",
     "prettier": "3.0.3",
     "prisma": "^5.21.1",
     "run-script-os": "^1.1.6",
     "tailwindcss": "^3.4.17",
+    "ts-node": "^10.9.2",
     "typescript": "^5.6.3"
   }
 }
