--- a/package.json
+++ b/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
     "build": "prisma generate && next build",
     "start": "next start",
     "lint": "next lint && npx tsc",
@@ -12,7 +11,9 @@
     "schema:gen:windows": ".\\scripts\\schema_gen\\schema_gen.bat",
     "db:migrate": "npx prisma migrate dev",
     "db:view": "npx prisma studio",
-    "test:api": "ts-node tests/api-test.ts"
+    "test:api": "ts-node tests/api-test.ts",
+    "dev": "NEXT_TELEMETRY_DEBUG=1 next dev",
+    "analyze": "node scripts/analyze-build.js"
   },
   "dependencies": {
     "@apollo/server": "^4.11.2",
@@ -39,6 +40,7 @@
     "@apollo/client": "^3.12.5",
     "@graphql-tools/merge": "^9.0.15",
     "@heroicons/react": "^2.2.0",
+    "@next/bundle-analyzer": "^15.1.4",
     "@next/eslint-plugin-next": "^14.0.4",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
