--- a/package.json
+++ b/package.json
@@ -21,20 +21,11 @@
     "@headlessui/react": "^2.2.0",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-dialog": "^1.1.4",
-    "@shadcn/ui": "^0.0.4",
-    "bcryptjs": "^2.4.3",
-    "class-variance-authority": "^0.7.1",
-    "clsx": "^2.1.1",
     "graphql": "^16.10.0",
     "graphql-scalars": "^1.24.0",
-    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.16",
     "react": "^18",
-    "react-dom": "^18",
-    "react-icons": "^4.11.0",
-    "sass": "^1.69.5",
-    "shadcn-ui": "^0.9.4",
-    "tailwind-merge": "^2.6.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@apollo/client": "^3.12.5",
