--- a/package.json
+++ b/package.json
@@ -16,19 +16,22 @@
     "analyze": "node scripts/analyze-build.js"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.6",
     "@apollo/server": "^4.11.2",
     "@as-integrations/next": "^3.1.0",
     "@headlessui/react": "^2.2.0",
     "@prisma/client": "^5.21.1",
     "@radix-ui/react-dialog": "^1.1.4",
+    "bcryptjs": "^2.4.3",
     "graphql": "^16.10.0",
     "graphql-scalars": "^1.24.0",
+    "jsonwebtoken": "^9.0.2",
     "next": "^14.2.16",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "sass": "^1.83.4"
   },
   "devDependencies": {
-    "@apollo/client": "^3.12.5",
     "@graphql-tools/merge": "^9.0.15",
     "@heroicons/react": "^2.2.0",
     "@next/bundle-analyzer": "^15.1.4",
